--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a student.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Lubbock, TX</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Riding dirt bikes, skiing, and playing video games.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Coding for a clean energy company.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Austin, TX</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>So that I can fulfill my own applicable creations.</p>
     </section>
 
     <footer id="footer">
